# ebpfguard

./: .gitattributes  COMMUNITY.md  Cargo.toml  README.md  README.tpl  enable-bpf-lsm.py  policy.yaml
.cargo/: config.toml
.github/workflows/: build-test.yaml
.vim/: coc-settings.json
doc/: DEVELOPMENT.md  PREREQUISISTES.md  development.md  prerequisites.md
docker/ubuntu/: Dockerfile
docs/: docusaurus.config.js  sidebars.js
docs/docs/ebpfguard/: index.md
docs/gh/: development.md  docker_devel_env.md  examples.md  prerequisites.md
ebpfguard/: Cargo.toml
ebpfguard-common/: Cargo.toml
ebpfguard-common/src/: alerts.rs  consts.rs  lib.rs  policy.rs
ebpfguard-ebpf/: Cargo.toml  build.rs
ebpfguard-ebpf/src/: binprm.rs  bprm_check_security.rs  consts.rs  file_open.rs  lib.rs  main.rs  maps.rs  sb_mount.rs  sb_remount.rs  sb_umount.rs  socket_bind.rs  socket_connect.rs  task_fix_setuid.rs  vmlinux.h  vmlinux_access.c
ebpfguard/src/: alerts.rs  error.rs  fs.rs  hooks.rs  lib.rs  manager.rs
ebpfguard/src/hooks/: bprm_check_security.rs  file_open.rs  mod.rs  sb_mount.rs  sb_remount.rs  sb_umount.rs  socket_bind.rs  socket_connect.rs  task_fix_setuid.rs
ebpfguard/src/policy/: inode.rs  mod.rs  reader.rs
examples/cli/: Cargo.toml  policy.yaml
examples/cli/examples/cli/: file_open.rs  main.rs  sb_mount.rs  socket_bind.rs  socket_connect.rs  task_fix_setuid.rs
examples/daemon/: Cargo.toml
examples/daemon/examples/: daemon.rs
examples/demo_socket_listen/: Cargo.toml
examples/demo_socket_listen/src/: main.rs
examples/file_open/: Cargo.toml
examples/file_open/examples/: file_open.rs
examples/mount/: Cargo.toml
examples/mount/examples/: mount.rs
examples/readme_mount/: Cargo.toml
examples/readme_mount/src/: main.rs
examples/task_fix_setuid/: Cargo.toml
examples/task_fix_setuid/examples/: task_fix_setuid.rs
guardctl/: Cargo.toml
guardctl/src/: main.rs
guardctl/src/policy/: file_open.rs  mod.rs  setuid.rs  socket_bind.rs  socket_connect.rs
guardity/: Cargo.toml
guardity-common/: Cargo.toml
guardity-common/src/: lib.rs  policy.rs
guardity-ebpf/: Cargo.toml  build.rs
guardity-ebpf/src/: binprm.rs  bprm_check_security.rs  consts.rs  file_open.rs  lib.rs  main.rs  maps.rs  net.rs  setuid.rs  socket.rs  socket_bind.rs  socket_connect.rs  vmlinux.rs
guardity/src/: alerts.rs  error.rs  hooks.rs  lib.rs  main.rs
guardity/src/policy/: engine.rs  inode.rs  mod.rs  reader.rs
tests/: Cargo.toml
tests/.cargo/: config.toml
tests/tests/: tests.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  codegen.rs  generate_readme.rs  main.rs  run.rs
