[package]
name = "ebpfguard-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
ebpfguard-common = { path = "../ebpfguard-common" }

[build-dependencies]
aya-tool = { git = "https://github.com/aya-rs/aya", branch = "main" }

[lib]
name = "ebpfguard_ebpf"
path = "src/lib.rs"

[[bin]]
name = "ebpfguard"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
