[package]
name = "ebpfguard"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/deepfence/aya-rs", branch = "btf-fixes", features=["async_tokio"] }
bytes = "1.4"
clap = { version = "4.2", features = ["derive"] }
ebpfguard-common = { path = "../ebpfguard-common", features = ["user"] }
env_logger = "0.10"
log = "0.4"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
thiserror = "1.0"

[lib]
name = "ebpfguard"
path = "src/lib.rs"
