[package]
name = "guardity-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["anyhow", "aya", "serde"]

[dependencies]
anyhow = { version = "1.0", optional = true }
aya = { version = ">=0.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"
