[package]
name = "guardity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features=["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
clap = { version = "4.2", features = ["derive"] }
guardity-common = { path = "../guardity-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "guardity"
path = "src/main.rs"
