[package]
name = "guardity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features=["async_tokio"] }
bytes = "1.4"
clap = { version = "4.2", features = ["derive"] }
guardity-common = { path = "../guardity-common", features = ["user"] }
anyhow = { version = "1", features = ["backtrace"] }
env_logger = "0.10"
log = "0.4"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
thiserror = "1.0"

[[bin]]
name = "guardity"
path = "src/main.rs"
