[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebpfguard = { path = "../ebpfguard" }
tokio = { version = "1.28.2", features = ["full"] }
tokio-test = "*"
tokio-util = "0.7.0"
