[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2", features = ["derive"] }
cli-table = "0.4.7"
ebpfguard = { path = "../../ebpfguard" }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
