[package]
name = "demo_socket_listen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2", features = ["derive"] }
ebpfguard = { path = "../../ebpfguard" }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
