[package]
name = "mount"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2", features = ["derive"] }
env_logger = "0.11"
ebpfguard = { path = "../../ebpfguard" }
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
